--- a/excel_comp/authentication/templates/registration/header.html
+++ b/excel_comp/authentication/templates/registration/header.html
@@ -6,7 +6,7 @@
         <a href="">About</a>
     </div>
     <div class="nav-btns">
-        <a id="btn-1">Sign In</a>
-        <a id="btn-2" >Sign Up</a>
+        <a href="{% url 'login' %}" id="btn-1">Sign In</a>
+        <a href="{% url 'register' %}" id="btn-2" >Sign Up</a>
     </div>
 </nav>
