--- a/excel_comp/core/static/core/css/main.css
+++ b/excel_comp/core/static/core/css/main.css
@@ -12,227 +12,458 @@
   --white: rgba(255, 255, 255, 100%);
 }
 
+/* sm: '480px',
+      md: '768px',
+      lg: '976px',
+      xl: '1440px' */
+
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  line-height: 1.5;
 }
 
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   background-color: var(--bg);
-  /* margin: auto 2rem; */
+  margin: auto 2rem;
+  overflow-x: hidden;
 }
+/* mobile first */
 
-@font-face {
-    font-family: 'Montserrat';
-    src: local('Montserrat'), url('../static/fonts/Montserrat-Regular.ttf');
-    font-style: normal;
-    font-weight: 300;
+/* index.html */
+#hero > .logo-group {
+  visibility: hidden;
 }
-
-@font-face {
-    font-family: 'Open Sans';
-    src: url('OpenSans-Regular.ttf');
-    font-style: normal;
-    font-weight: 300;
-}
-
-@font-face {
-    font-family: 'Montserrat';
-    src: local('Montserrat'), url('../static/fonts/Montserrat-Bold.ttf');
-    font-style: normal;
-    font-weight: 700;
-}
-@font-face {
-    font-family: 'Montserrat';
-    src: local('Montserrat'), url('../static/fonts/Montserrat-SemiBold.ttf');
-    font-style: normal;
-    font-weight: 500;
-}
-
-.page-container {
-    min-height: 50vh;
-}
-
-p {
-    line-height: 22px;
-    font-family: 'Open Sans';
-}
-
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 5% 10px;
-    border-bottom: 1px solid #04045E;
-}
-#brand_color {
-    color: #00B4D8;
-}
-
-.navigations,.nav-btns {
-    display: flex;
-    gap: 45px;
-}
-
-.navigations a {
-    text-decoration: none;
-    color: #000;
-}
-.nav-btns {
-    gap: 10px;
-}
-.nav-btns a{
-    font-family: Montserrat;
-    text-decoration: none;
-    padding: 10px 20px;
-    border: 1px solid;
-    border-radius: 8px;
-    cursor: pointer;
-}
-#btn-1 {
-    border-color: #04045E;
-    color: #04045E;
-}
-#btn-1:hover {
-    background: rgb(159, 230, 247);
-    color: rgb(216, 244, 250);
-}
-
-#btn-2 {
-    background-color: #04045E;
-    color: rgb(207, 241, 249);
-    /* text-decoration: none; */
-}
-
-#btn-2:hover {
-    background: #010122;
-    color: rgb(207, 241, 249);
-}
-
-main {
-    padding: 8% 17% 0;
-}
-section {
-    padding-top: 6%;
-}
-
-/* ul {
-    list-style: none;
-} */
-
-li {
-    padding: 10px 0;
-}
-
-/* ul li::before {
-    content: "\2022";
-    color: #04045E;
-    font-weight: bold;
-    font-size: 2.5em;
-    padding-top: 5px;
-    display: inline-block; 
-    width: 1em;
-    margin-left: -1em;
-} */
-
-.center {
-    text-align: center;
-}
-
-.heading {
-    font-weight: 500;
-    padding: 30px 0 15px;
-}
-
-.header {
-    padding: 0;
-    font-weight: 500;
-}
-
-footer {
-    margin-top: 30px;
-    display: flex;
-    padding: 3% 5% 5% ;
-    border-top: 1px solid #04045E;
-}
-
-.right {
-    margin-left: 7%;
-    display: flex;
-    flex-direction: column;
-}
-.right span {
-    padding-top: 20px;
-    font-weight: 500;
-}
-
-.right h3 {
-    font-weight: bold;
-}
-
-#footer-hero {
-    width: 45%;
-    padding-top: 30px;
-}
-
-#footer-hero h1 {
-    font-size: 2.5em;
-}
-
-#ease{
-    
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 33px;
-  color: 
-  #04045E;      
-}
-
-#head{
-    text-align: center;
-}
-  
-#upload {
-  display: none;
-}
-#form{
-  margin: auto;
-  background-color: #04045E;
+.logo-group {
   display: flex;
-  flex-direction: row;
-  width: 40%;
-  border-radius: 15px;
-  min-height: 80px;
+  flex-direction: column;
+  position: absolute;
+  top: 9%;
+  left: 10%;
 }
-#span{
+#one {
+  position: relative;
+  left: 5.5rem;
+  height: 2rem;
+  width: 8.5rem;
+}
+#two {
+  position: relative;
+  bottom: 2rem;
+  height: 4.5rem;
+  width: 20rem;
+}
+.container {
+  width: 100%;
   display: flex;
-  width: 75%;
+  flex-direction: column-reverse;
   align-items: center;
-  justify-content: center;
-  color: #f2f2f2;
-
+  padding: 0 1.5rem 0 1.5rem;
+  margin-top: 2.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  border-bottom: 1px solid var(--darkBlue);
 }
-  #body{
-    background-color:  #FFFFFF;
-    cursor: pointer;
-    width: 25%;
-    border-radius: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.hero-1 {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 8rem;
+  
+}
+.heading {
+  max-width: 28rem;
+  font-weight: bold;
+  color: var(--darkBlue);
+  text-align: center;
+  font-size: 20px;
+  line-height: 2rem;
+}
+.para {
+  color: var(--darkBlue);
+  text-align: center;
+  line-height: 1.5;
+}
+.btn-div {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+}
+.btn-div .button {
+  padding: 0.75rem;
+  padding-top: 0.5rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  color: var(--white);
+  background-color: var(--darkBlue);
+  border-radius: 0.3rem;
+  width: 7rem;
+  height: 1rem;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 14px;
+  font-family: 'Open Sans', sans-serif;
+}
+.img {
+  width: 20rem;
+}
+.arrow {
+  position: relative;
+  top: -1.5rem;
+  left: 5rem;
+}
+
+/* CTA */
+
+.newsletter {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: space-between;
+  margin: 3rem 4rem;
+  border-radius: 15px;
+  padding: 3rem 3.5rem;
+  background-color: var(--darkBlue);
+}
+.newsletter-form > input {
+  width: 70%;
+  height: 1.5rem;
+  border-radius: 7px;
+  outline: none;
+  border: none;
+  padding: 0.2rem 0.5rem;
+  
+}
+.join {
+  color: var(--white);
+  margin-bottom: 1.5rem;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+}
+.join-para {
+  color: var(--grey);
+  font-size: smaller;
+  position: relative;
+  top: -1.5rem;
+}
+.join-btn {
+  width: 3rem;
+  height: 2rem;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+  font-size: smaller;
+  border: none;
+  border-radius: 7px;
+  background-color: var(--color7);
+  color: var(--white);
+  position: relative;
+  left: -3rem;
+}
+.newsletter-form::placeholder {
+  font-size: 0.5px;
+  color: var(--grey);
+}
+
+
+/* sign in page */
+.signin-box {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 25%;
+  left: 10%;
+  width: 100%;
+  max-width: 22rem;
+  font-family: 'Open Sans', sans-serif;
+}
+.legend {
+  color: var(--darkBlue);
+  font-family: 'Open Sans', sans-serif;
+  font-size: small;
+  font-weight: 400;
+  position: relative;
+  top: 0.5rem;
+}
+.legend span {
+  font-weight: 700;
+  font-size: 24;
+}
+#signin-email, #signin-pwd {
+  border: none;
+  width: 17rem;
+  height: 1.5rem;
+  margin: 0.5rem 0;
+  border-radius: 5px;
+  padding: 0.5rem 0.5rem;
+  outline: none;
+}
+#signin-pwd::placeholder, #signin-email::placeholder {
+  color: var(--darkBlue);
+  font-size: 16px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
+}
+.forgot-pwd {
+  position: relative;
+  top: -10px;
+  left: 5rem;
+  color: var(--darkBlue);
+  font-size: smaller;
+  font-family: 'Open Sans', sans-serif;
+  
+}
+.forgot-pwd a {
+  text-decoration: none;
+  color: var(--darkBlue);
+  font-weight: bolder;
+}
+.btn-box {
+  text-align: center;
+  margin: 1rem 0;
+  position: relative;
+  left: -2rem;
+}
+.btn-box button {
+ /*  width: 8.5rem; */
+  height: 2.2rem;
+  border-radius: 5px;
+  margin: 0 0.5rem;
+  text-align: center;
+}
+#btn1 {
+  border: 1.5px solid var(--darkBlue);
+  background-color: transparent;
+  color: var(--darkBlue);
+  font-weight: 700;
+  font-size: medium;
+  font-family: 'Open Sans', sans-serif;
+}
+#btn2 {
+  background-color: var(--darkBlue);
+  border: none;
+  color: var(--bg);
+  font-weight: 700;
+  font-size: medium;
+  font-family: 'Open Sans', sans-serif;
+}
+#or {
+  visibility: hidden;
+}
+.social-icons {
+  position: relative;
+  top: -1.5rem;
+  left: 4rem;
+  width: 11rem;
+}
+
+
+
+
+/* sign up page */
+.signup-box {
+  border: 1px solid;
+  position: absolute;
+  top: 30%;
+  left: 20%;
+  width: 100%;
+  max-width: 20rem;
+  font-family: 'Open Sans', sans-serif;
+}
+.l-signup {
+  position: relative;
+  left: -2rem;
+  text-align: center;
+  font-weight: bold;
+  font-size: small;
+  color: var(--darkBlue);
+  margin-top: 0.5rem;
+}
+.signup-form input{
+  border: none;
+  width: 18rem;
+  height: 1.2rem;
+  margin: 0.5rem 0;
+  border-radius: 10px;
+  padding: 0.5rem 0.5rem;
+  outline: none;
+}
+.signup-form input::placeholder {
+  font-family: 'Open Sans', sans-serif;
+  color: var(--darkBlue);
+  font-size: medium;
+  font-weight: lighter;
+}
+.btn2 {
+  background-color: var(--darkBlue);
+  font-weight: 700;
+  font-size: large;
+  font-family: 'Open Sans', sans-serif;
+  width: 8.5rem;
+  height: 2.5rem;
+  border: none;
+  border-radius: 10px;
+  position: relative;
+  left: 25%;
+  top: 1rem;
+}
+.btn2:hover {
+  background-color: transparent;
+}
+.btn2 a, #btn2 a {
+  text-decoration: none;
+  color: var(--bg);
+}
+.btn2 a:hover {
+  color: var(--darkBlue);
+}
+/* new here and already have pages */
+.body {
+  background-color: var(--darkBlue);
+}
+.account, .new-here {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 50%;
+  position: absolute;
+  top: 30%;
+  left: 25%;
+  font-family: 'Open sans', sans serif;
+}
+.account h2, .new-here h2 {
+  color: white;
+  font-size: 36px;
+  margin-bottom: 5rem;
+  line-height: 1;
+}
+.account button, .new-here button {
+  width: 10rem;
+  height: 3rem;
+  border-radius: 2.5rem;
+  background-color: transparent;
+  border-color: var(--white);
+  color: var(--white);
+  font-family: 'Montserrat';
+  font-weight: bold;
+  font-size: 16px;
+}
+.new-here p {
+  color: var(--white);
+  font-weight: lighter;
+  font-size: 14px;
+  margin-bottom: 3rem;
+  
+}
+.new-here span {
+  font-style: italic;
+}
+.new-here button {
+  border-radius: 7px;
+  border: 0.5px solid;
+}
+
+
+
+
+@media screen and (min-width: 768px) {
+  body {
+    margin: 0 0;
+    overflow-x: hidden;
+  }
+  .logo-group {
+    left: 10%;
+  }
+  #one {
+    position: relative;
+    left: 5.5rem;
+    height: 3.5rem;
+    width: 9.5rem;
+  }
+  #two {
+    position: relative;
+    bottom: 2.5rem;
+    height: 4rem;
+  }
+  .container {
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 0;
+  }
+  .hero-1 {
+    width: 50%;
+    margin-top: 2.5rem;
+    padding: 2.5rem 2rem;
+  }
+  .heading {
+    font-size: 1.5rem;
+    line-height: 1.5;
+    text-align: left;
+  }
+  .para {
+    text-align: left;
+  }
+  .btn-div {
+    justify-content: start;
+  }
+  .hero-img {
+    width: 50%;
+    margin: 0 2rem 0 5rem;
+    text-align: center;
+  }
+  .img {
+    width: 21rem;
+  }
+  .newsletter {
+    padding-top: 3rem;
+    padding-bottom: 3rem;
   }
   
-  #body img {
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
+  .signin-box {
+    left: 35%;
+    max-width: 26rem;
   }
-
-  .page-container {
-      color: var(--darkBlue);
+  #signin-email, #signin-pwd {
+    width: 22rem;
+    height: 1.3rem;
+    margin: 1rem 1rem;
   }
-
+  .legend {
+    left: 1rem;
+  }
+  .forgot-pwd {
+    left: 11rem;
+  }
+  .btn-box {
+    text-align: center;
+    margin: 1rem 0;
+  }
+  .btn-box button {
+    width: 8rem;
+  }
+  #or {
+    visibility: visible;
+    color: var(--darkBlue);
+    text-align: center;
+    font-size: 30px;
+    font-weight: 700;
+    font-family: 'Open Sans', sans-serif;
+  }
+  .social-icons {
+    position: relative;
+    top: 1rem;
+    text-align: center;
+  }
+  .signup-box {
+    max-width: 26rem;
+  }
+  .signup-form input{
+    margin: 0.5rem 0.5rem;
+  }
+  .btn2 {
+    left: 32%;
+  }
+  .logo-group {
+    left: 43%;
+  }
+}
