--- a/excel_comp/authentication/templates/registration/base.html
+++ b/excel_comp/authentication/templates/registration/base.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excel_Comp</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'authentication/css/style.css' %}">
     {% block extra_css %} 
 
     {% endblock %}
