--- a/excel_comp/authentication/templates/registration/base.html
+++ b/excel_comp/authentication/templates/registration/base.html
@@ -6,17 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excel_Comp</title>
     <link rel="stylesheet" href="{% static 'authentication/css/style.css' %}">
+    {% if request.user.is_authenticated %} 
+    <link rel="stylesheet" href="{% static 'authentication/css/head.css' %}">
+    
+    {% else %}
+    <link rel="stylesheet" href="{% static 'authentication/css/header.css' %}">
+    {% endif %}
+
     {% block extra_css %} 
 
     {% endblock %}
 </head>
 <body>
+    {% if request.user.is_authenticated %}
+    {% include 'registration/head.html' %}
+    {% else %}
     {% include 'registration/header.html' %}
-
+     {% endif %}
     {% block content %} 
 
     {% endblock %}
     {% include 'registration/footer.html' %}
-    
+    {% if request.user.is_authenticated %} 
+    <script>
+        const brand = document.getElementById("avatar");
+        const drop = document.getElementById("dropdown");
+        const container = document.getElementById("container");
+        const navbar = document.getElementById("navbar");
+        const show = document.getElementById("add");
+        const hide = document.getElementById("remove");
+  
+        show.addEventListener("click", (event) => {
+          navbar.classList.add("show");
+        });
+        hide.addEventListener("click", (event) => {
+          navbar.classList.remove("show");
+        });
+  
+        brand.addEventListener("mouseover", (event) => {
+          drop.classList.add("hover");
+        });
+        container.addEventListener("mouseover", (event) => {
+          drop.classList.remove("hover");
+        });
+      </script>
+    {% endif %}
 </body>
 </html>
