--- a/excel_comp/authentication/templates/registration/otp.html
+++ b/excel_comp/authentication/templates/registration/otp.html
@@ -18,7 +18,7 @@
 {% endblock %}
 
 {% block content %} 
-<main class="page-container">
+<main class="page-container" id="container">
   
     <div class="container">
       <form method="post">
@@ -79,8 +79,8 @@
         </div>
 
         <div class="btn">
-          <a href="#"><button id="resend">Resend Code</button></a>
-          <a href="#"><button id="verify"> Verify code</button></a>
+          <a href="#" id="resend">Resend Code</a>
+          <button id="verify">Verify code</button>
         </div>
       </form>
     </div>
