--- a/excel_comp/authentication/templates/registration/header.html
+++ b/excel_comp/authentication/templates/registration/header.html
@@ -1,15 +1,16 @@
+
 <nav>
     <h2>Excel<span id="brand_color">_Comp</span></h2>
     <div class="navigations">
-        <a href="{% url 'dashboard' %}">Home</a>
+        <a href="{% url 'home' %}">Home</a>
         <a href="{% url 'how_to_use' %}">How to use</a>
         <a href="{% url 'about' %}">About</a>
     </div>
     {% if request.user.is_authenticated %} 
-    <div class="nav-btns">
+    <!-- <div class="nav-btns">
         <a href="#" id="btn-2" >{{ request.user.username }}</a>
         <a href="{% url 'logout' %}">Logout</a>
-    </div>
+    </div> -->
     {% else %}
     <div class="nav-btns">
         <a href="{% url 'login' %}" id="btn-1">Sign In</a>
