some production settings

--- a/excel_comp/authentication/templates/registration/base.html
+++ b/excel_comp/authentication/templates/registration/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excel_Comp</title>
     <link rel="stylesheet" href="{% static 'authentication/css/style.css' %}">
+    <script type = "text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     {% if request.user.is_authenticated %} 
     <link rel="stylesheet" href="{% static 'authentication/css/head.css' %}">
     
