--- a/excel_comp/authentication/templates/registration/otp.html
+++ b/excel_comp/authentication/templates/registration/otp.html
@@ -21,7 +21,7 @@
 <main class="page-container" id="container">
   
     <div class="container">
-      <form method="post">
+      <form method="post" id="otp-form">
 
         <div class="details">
           <div id="image1"> <img src="{% static 'authentication/images/Excel_Comp.png' %}"  alt=""></div>
@@ -35,6 +35,7 @@
             <input
               class="otp"
               type="text"
+              id="otp1"
               oninput="digitValidate(this)"
               onkeyup="tabChange(1)"
               maxlength="1"
@@ -42,6 +43,7 @@
             <input
               class="otp"
               type="text"
+              id="otp2"
               oninput="digitValidate(this)"
               onkeyup="tabChange(2)"
               maxlength="1"
@@ -49,6 +51,7 @@
             <input
               class="otp"
               type="text"
+              id="otp3"
               oninput="digitValidate(this)"
               onkeyup="tabChange(3)"
               maxlength="1"
@@ -56,12 +59,14 @@
             <input
               class="otp"
               type="text"
+              id="otp4"
               oninput="digitValidate(this)"
               onkeyup="tabChange(4)"
               maxlength="1"
             />
             <input
               class="otp"
+              id="otp5"
               type="text"
               oninput="digitValidate(this)"
               onkeyup="tabChange(5)"
@@ -70,10 +75,12 @@
             <input
               class="otp"
               type="text"
+              id="otp6"
               oninput="digitValidate(this)"
               onkeyup="tabChange(6)"
               maxlength="1"
             />
+            <input type="text" name="user_otp" value="" hidden>
           </div>
 
         </div>
@@ -90,6 +97,24 @@
 
 {% block extra_script %} 
 <script>
+  $('#otp-form').submit(function() {
+    const t1 = $('#otp1').value
+    const t2 = $('#otp2').value
+    const t3 = $('#otp3').value
+    const t4 = $('#otp4').value
+    const t5 = $('#otp5').value
+    const t6 = $('#otp6').value
+
+    let res = t1 + t2+t3+t4+t5+t6
+    
+    let result = document.getElementsByName('user_otp')
+    result.value = res
+
+    return true
+    
+  })
+  let otp1 = document.getElementsByName
+
   let digitValidate = function(ele){
     console.log(ele.value);
     ele.value = ele.value.replace(/[^0-9]/,'');
