--- a/excel_comp/core/templates/core/dashboard.html
+++ b/excel_comp/core/templates/core/dashboard.html
@@ -28,7 +28,7 @@
         
         <section id="form">    
             <div id="span">
-                <span> Upload XLS/CSV File</span>
+                <span style="color:#fff"> Upload XLS/CSV File</span>
             </div>
             
             <div id="body" >
