--- a/excel_comp/authentication/static/authentication/css/head.css
+++ b/excel_comp/authentication/static/authentication/css/head.css
@@ -4,7 +4,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: #04045E;
 }
 
 
@@ -13,8 +12,6 @@ body {
     font-family: 'Montserrat';
     font-weight: 400;
     font-size: 20px;
-    /* margin: auto; */
-    text-align: center;
 }
 
 h1 {
@@ -53,6 +50,7 @@ header {
     text-decoration: none;
     margin: 0 20px;
     transition: 0.2s ease-in;
+    color:#04045E;
 }
 
 .nav-icon {
@@ -125,6 +123,8 @@ header {
     background: none;
     height: 100%;
     width: 100%;
+    text-decoration: none;
+    color: #04045E;
 }
 .list a img {
     transform: translateY(5%);
