--- a/excel_comp/staticfiles/core/css/result.css
+++ b/excel_comp/staticfiles/core/css/result.css
@@ -5,7 +5,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* background:  linear-gradient(0deg, rgba(202, 240, 248, 0.9), rgba(202, 240, 248, 0.9)), #FFFFFF; */
     color: #04045E;
 
 }
@@ -15,8 +14,6 @@ body {
     font-family: 'open sans', sans-serif;
     font-weight: 400;
     font-size: 16px;
-    /* width: 80vw; */
-    /* margin: auto; */
     text-align: center;
 }
 
@@ -42,21 +39,18 @@ p{
 
 }
 .result{
-    /* background: white; */
     width: 50%;
-    /* border-radius: 20px; */
-    /* overflow: auto; */
 }
 
 .summary{
-    width: 100%;
-    height: 35vh;
     border: 1px #04045E solid;
     border-radius: 20px;
+    padding: 0 5%;
+    display: flex;
+    flex-direction: column;
 }
 .summary>.detail{
     border-bottom:  1px #04045E solid;
-    height: 12.5%;
     width: 100%;
     display: flex;
     padding: 0 10%;
@@ -66,7 +60,6 @@ p{
     width: 50%;
 }
 .space{
-    height: 25%;
     width: 60%;
     margin: auto;
     text-align: center;
@@ -75,7 +68,7 @@ p{
     padding-top: 10px;
 }
 
-button{
+.download {
     background: #04045E;
     color: rgba(202, 240, 248, 0.9) ;
     padding: 20px 20px;
@@ -86,24 +79,28 @@ button{
     transition: 0.3s ease;
 }
 
+.di1,.di2 {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
 a>button:hover {
     transform: scale(0.95);
     cursor: pointer;
-
 }
 
 .options{
     display: flex;
     justify-content: space-between;
-    width: 100%;
     height: 150px;
-    margin-bottom: 10vh;
+    
 }
-.options >div{
+/* .options >div{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-}
+} */
 
 
 
