--- a/excel_comp/authentication/templates/registration/login.html
+++ b/excel_comp/authentication/templates/registration/login.html
@@ -14,6 +14,16 @@
 {% block content %} 
 <main class="page-container">
 
+{% for field in form %}
+  <div class="fieldWrapper">
+      {{ field.errors }}
+      {{ field.label_tag }} {{ field }}
+      {% if field.help_text %}
+      <p class="help">{{ field.help_text|safe }}</p>
+      {% endif %}
+  </div>
+{% endfor %}
+
       <div class="signin-box" style="padding-top: 0;">
         
           <div id="image1"> <img src="{% static 'authentication/images/Excel_Comp.png' %}"  alt=""></div>
