--- a/excel_comp/authentication/templates/registration/login.html
+++ b/excel_comp/authentication/templates/registration/login.html
@@ -14,13 +14,10 @@
 {% block content %} 
 <main class="page-container">
 
-{% for field in form %}
-  <div class="fieldWrapper">
-      {{ field.errors }}
 
-  </div>
-{% endfor %}
-
+      {% for field in form %}
+        <span>{{ field.errors }}</span>  
+      {% endfor %}  
       <div class="signin-box" style="padding-top: 0;">
         
           <div id="image1"> <img src="{% static 'authentication/images/Excel_Comp.png' %}"  alt=""></div>
