--- a/excel_comp/core/templates/core/landing_page.html
+++ b/excel_comp/core/templates/core/landing_page.html
@@ -24,8 +24,14 @@
       <p class="para">A platform that helps users compare the content of Excel files! With our intuitive interface and
         powerful tools, you can easily compare Excel files and see the duplicates in them.</p>
       <div class="btn-div">
-        <a href="{% url 'login' %}" class="button">Get Started<img class="arrow"
-            src="{% static 'core/images/arrow-right.svg' %}" alt=""></a>
+        <a href="{% url 'login' %}" class="button">
+            <span style="display: block;"> Get Started </span>
+            <!-- <img class="arrow" src="{% static 'core/images/arrow-right.svg' %}"> -->
+            <svg width="40" height="25" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M28.8602 37.6402C28.4802 37.6402 28.1002 37.5002 27.8002 37.2002C27.2202 36.6202 27.2202 35.6602 27.8002 35.0802L38.8802 24.0002L27.8002 12.9202C27.2202 12.3402 27.2202 11.3802 27.8002 10.8002C28.3802 10.2202 29.3402 10.2202 29.9202 10.8002L42.0602 22.9402C42.6402 23.5202 42.6402 24.4802 42.0602 25.0602L29.9202 37.2002C29.6202 37.5002 29.2402 37.6402 28.8602 37.6402Z" fill="white"/>
+              <path d="M40.66 25.5H7C6.18 25.5 5.5 24.82 5.5 24C5.5 23.18 6.18 22.5 7 22.5H40.66C41.48 22.5 42.16 23.18 42.16 24C42.16 24.82 41.48 25.5 40.66 25.5Z" fill="white"/>
+            </svg>
+          </a>
       </div>
     </div>
     <div class="hero-img">
@@ -45,8 +51,13 @@
           Our platform is user friendly and easy to use. Try it out today.
         </p>
         <div class="btn-div">
-          <a href="{% url 'login' %}" class="button">Try now&nbsp;&nbsp;&nbsp;&nbsp; <img class="arrow"
-              src="{% static 'core/images/arrow-right.svg' %}"></a>
+          <a href="{% url 'login' %}" class="button">
+             <span style="display: block;"> Try now&nbsp;&nbsp;&nbsp;&nbsp; </span>
+            <svg width="40" height="25" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M28.8602 37.6402C28.4802 37.6402 28.1002 37.5002 27.8002 37.2002C27.2202 36.6202 27.2202 35.6602 27.8002 35.0802L38.8802 24.0002L27.8002 12.9202C27.2202 12.3402 27.2202 11.3802 27.8002 10.8002C28.3802 10.2202 29.3402 10.2202 29.9202 10.8002L42.0602 22.9402C42.6402 23.5202 42.6402 24.4802 42.0602 25.0602L29.9202 37.2002C29.6202 37.5002 29.2402 37.6402 28.8602 37.6402Z" fill="white"/>
+              <path d="M40.66 25.5H7C6.18 25.5 5.5 24.82 5.5 24C5.5 23.18 6.18 22.5 7 22.5H40.66C41.48 22.5 42.16 23.18 42.16 24C42.16 24.82 41.48 25.5 40.66 25.5Z" fill="white"/>
+            </svg>
+          </a>
         </div>
       </div>
       <div class="hero-img">
@@ -65,8 +76,13 @@
           to merge data form multiple sources? Our platform is the right place to use as it is easy to compare Excel
           files and identify any discrepancies.</p>
         <div class="btn-div">
-          <a href="{% url 'login' %}" class="button">Try now&nbsp;&nbsp;&nbsp;&nbsp; <img class="arrow"
-              src="{% static 'core/images/arrow-right.svg' %}"></a>
+          <a href="{% url 'login' %}" class="button">
+            <span style="display: block;"> Try now&nbsp;&nbsp;&nbsp;&nbsp; </span>
+            <svg width="40" height="25" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M28.8602 37.6402C28.4802 37.6402 28.1002 37.5002 27.8002 37.2002C27.2202 36.6202 27.2202 35.6602 27.8002 35.0802L38.8802 24.0002L27.8002 12.9202C27.2202 12.3402 27.2202 11.3802 27.8002 10.8002C28.3802 10.2202 29.3402 10.2202 29.9202 10.8002L42.0602 22.9402C42.6402 23.5202 42.6402 24.4802 42.0602 25.0602L29.9202 37.2002C29.6202 37.5002 29.2402 37.6402 28.8602 37.6402Z" fill="white"/>
+              <path d="M40.66 25.5H7C6.18 25.5 5.5 24.82 5.5 24C5.5 23.18 6.18 22.5 7 22.5H40.66C41.48 22.5 42.16 23.18 42.16 24C42.16 24.82 41.48 25.5 40.66 25.5Z" fill="white"/>
+            </svg>
+          </a>
         </div>
       </div>
       <div class="hero-img">
