--- a/excel_comp/core/static/core/css/landing-page.css
+++ b/excel_comp/core/static/core/css/landing-page.css
@@ -52,7 +52,7 @@
   justify-content: center;
   margin-top: 1rem;
 }
-.btn-div .button {
+.btn-div > a {
   padding: 0.75rem;
   padding-top: 0.5rem;
   padding-left: 1.5rem;
@@ -60,8 +60,8 @@
   color: var(--white);
   background-color: var(--darkBlue);
   border-radius: 0.3rem;
-  width: 7rem;
-  height: 1rem;
+  display: flex;
+  align-items: center;
   text-decoration: none;
   font-weight: bold;
   font-size: 14px;
